<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2015 AT Computing BV
 This file is part of Space Travel Agency.
 Space Travel Agency is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.
 Space Travel Agency is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with Space Travel Agency.  If not, see <http://www.gnu.org/licenses/>.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <CheckBoxPreference 
        android:key="pref_animateBackground"
        android:title="@string/animate_background"
        android:summary="@string/beware_this_feature_is_a_battery_drainer"
        android:defaultValue="false"/>
    <CheckBoxPreference 
        android:key="pref_enableSounds"
        android:title="@string/enable_sound_effects"
        android:defaultValue="false"/>
    <CheckBoxPreference 
        android:key="pref_showSplashscreenAnimation"
        android:title="@string/enable_startup_animation"
        android:defaultValue="false"/>
</PreferenceScreen>