<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/textview_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/checkout" />

    <TextView
        android:id="@+id/textview_calculating_travelling_order"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_title"
        android:gravity="left"
        android:text="@string/calculating_travelling_order" />

    <LinearLayout
        android:id="@+id/linearlayout_bottomlayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textview_invited_friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />
        
        <LinearLayout
            android:id="@+id/linearlayout_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/total_price" />

            <TextView
                android:id="@+id/textview_total_price_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_available" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/listview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/linearlayout_bottomlayout"
        android:layout_below="@id/textview_calculating_travelling_order"
        android:cacheColorHint="#00000000" >
    </ListView>

</RelativeLayout>