<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2015 AT Computing BV
 This file is part of Space Travel Agency.
 Space Travel Agency is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.
 Space Travel Agency is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with Space Travel Agency.  If not, see <http://www.gnu.org/licenses/>.
-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout_confirmedanddeparturetime"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/confirmed_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirming_order" />

    <LinearLayout
        android:id="@+id/linearlayout_departure_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <TextView
            android:id="@+id/departure_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10sp"
            android:text="@string/departure_time" />

        <TextView
            android:id="@+id/departure_time_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_available_yet" />
    </LinearLayout>

    <fragment
        android:id="@+id/map"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10sp"
        class="com.google.android.gms.maps.SupportMapFragment" />

</LinearLayout>
